--- a/src/style.css
+++ b/src/style.css
@@ -29,10 +29,17 @@ a {
   justify-content: center;
 }
 
+.questions .main {
+  height: 100vh;
+  display: grid;
+  grid: 20% 80% / auto;
+}
+
 .q-question {
   border: 1px solid black;
   padding: 50px;
-  min-height: 400px;
+  height: 400px;
+  overflow-y: scroll;
 }
 
 .q-result-item {
